--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,21 +1,24 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
     <div class="container">
-      <a class="navbar-brand" href="#">Gym App</a>
+      <a class="navbar-brand" routerLink="/" routerLinkActive="active" >Gym App</a>
 
-        <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentUser$ |async">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Gym</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Lists</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Subscriptions</a>
-          </li>
+        <ul class="navbar-nav mr-auto">
+          <ng-container *ngIf="accountService.currentUser$ |async">
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/members" routerLinkActive="active">Gym</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/messages" routerLinkActive="active">Subscriptions</a>
+            </li>
+          </ng-container>
+         
         </ul>
 
-        <div class="dropdown" *ngIf="accountService.currentUser$ |async" dropdown>
-          <a  class="dropdown-toggle text-light" dropdownToggle>Welcome User</a>
+        <div class="dropdown" *ngIf="(accountService.currentUser$ |async) as user" dropdown>
+          <a  class="dropdown-toggle text-light" dropdownToggle>Welcome {{user.username | titlecase}}</a>
           <div class="dropdown-menu mt-3" *dropdownMenu>
             <a  class="dropdown-item">EditProfile</a>
             <div class="dropdown-divider"></div>
@@ -36,7 +39,7 @@
           class="form-control me-2" 
           type="password" placeholder="Password">
 
-          <button class="btn btn-outline-success" type="submit">Login</button>
+          <button class="btn btn-success" type="submit">Login</button>
         </form>
 
     </div>
