--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -22,9 +22,10 @@
         </ul>
 
         <div class="dropdown" *ngIf="(accountService.currentUser$ |async) as user" dropdown>
-          <a  class="dropdown-toggle text-light" dropdownToggle>Welcome {{user.username | titlecase}}</a>
-          <div class="dropdown-menu mt-3" *dropdownMenu>
-            <a  class="dropdown-item">EditProfile</a>
+          <img src="{{user.photoUrl}}" alt="{{user.username}}">
+          <a  class="dropdown-toggle text-light ml-2" dropdownToggle>Welcome {{user.username | titlecase}}</a>
+          <div class="dropdown-menu mt-3 " *dropdownMenu>
+            <a routerLink="/member/edit" class="dropdown-item">EditProfile</a>
             <div class="dropdown-divider"></div>
             <a  class="dropdown-item" (click)="logout()">LogOut</a>
 
