--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -4,7 +4,13 @@
         <ul class="list-inline member-icons animate text-center">
             <li class="list-inline-item"><button routerLink="/members/{{member.username}}" class="btn btn-primary"><i class="fa fa-user"></i></button></li>
             <li class="list-inline-item"><button (click)="addLike(member)" class="btn btn-primary"><i class="fa fa-heart"></i></button></li>
-            <li class="list-inline-item"><button class="btn btn-primary"><i class="fa fa-envelope"></i></button></li>
+            <li class="list-inline-item">
+                <button
+                 routerLink="/members/{{member.username}}" 
+                 [queryParams]="{tab: 2}"
+                 class="btn btn-primary">
+                 <i class="fa fa-envelope"></i>
+            </button></li>
 
         </ul>
     </div>
