--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -37,7 +37,7 @@
 
 .member-tabset > .tab-content{
    margin-top: -3px;
-   background-color: #fff;
+   background-color: rgb(255, 255, 255);
    border: 0;
    border-top: 1px solid #eee;
    padding: 15px 0;
