--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -3,6 +3,9 @@
         <div class="card">
             <img src="{{member.photoUrl || './assets/user.png'}}" alt=" {{member.username}}" class="card-img-top img-thumbnail">
             <div class="card-body">
+                <div class="mb-2" *ngIf="(presence.onlineUsers$ | async).includes(member.username)">
+                        <i class="fa fa-user-circle text-success"></i>Online now
+                </div>
                 <div>
                     <strong>Location:</strong>
                     <p>{{member.city}},{{member.country}}</p>
@@ -40,7 +43,7 @@
                     <ngx-gallery [options]="galleryOptions" [images]="galleryImages" style="display: inline-block; margin-bottom: 20px"></ngx-gallery>
                 </tab>
                 <tab heading="Messages" (selectTab)="onTabActivated($event)">
-                    <app-member-messages [messages]="messages" [username]="member.username"></app-member-messages>
+                    <app-member-messages [username]="member.username"></app-member-messages>
                 </tab>
         </tabset>
     </div>
