--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -3,27 +3,30 @@
 </div>
 
 <div class="container mt-3">
-    <form #form="ngForm" class="form-inline mb-3"(ngSubmit)="loadMembers()" autocomplete="off">
-        <div class="form-group">
-            <label >Age from:</label>
-            <input type="number" class="form-control ml-1" style="width: 70px;" name="minAge" 
-            [(ngModel)]="userParams.minAge">
+    <form #form="ngForm" class="form-app"  (ngSubmit)="loadMembers()" autocomplete="off">
+        <div class="testing">
+            <div >
+                <label >Age from:</label>
+                <input type="number" class="form-control ml-1" style="width: 70px;" name="minAge" 
+                [(ngModel)]="userParams.minAge">
+            </div>
+            <div >
+                <label >Age to:</label>
+                <input type="number" class="form-control ml-1" style="width: 70px;" name="maxAge" 
+                [(ngModel)]="userParams.maxAge">
+            </div>
+            <div >
+                    <label >Show: </label>
+                    <select name="gender" style="width: 130px;" [(ngModel)]="userParams.gender" class="form-control ml-1">
+                        <option *ngFor="let gender of genderList" [value]="gender.value">
+                            {{gender.display}}
+                        </option>
+                    </select>
+            </div>
+            <button class="btn btn-primary ml-1" type="submit">Apply filters</button>
+            <button (click)="resetFilters()" class="btn btn-info ml-1" type="submit">Reset filters</button>
         </div>
-        <div class="form-group px-2">
-            <label >Age to:</label>
-            <input type="number" class="form-control ml-1" style="width: 70px;" name="maxAge" 
-            [(ngModel)]="userParams.maxAge">
-        </div>
-        <div class="form-group px-2">
-                <label >Show: </label>
-                <select name="gender" style="width: 130px;" [(ngModel)]="userParams.gender" class="form-control ml-1">
-                    <option *ngFor="let gender of genderList" [value]="gender.value">
-                        {{gender.display}}
-                    </option>
-                </select>
-        </div>
-        <button class="btn btn-primary ml-1" type="submit">Apply filters</button>
-        <button (click)="resetFilters()" class="btn btn-info ml-1" type="submit">Reset filters</button>
+        
 
         <div class="col">
             <div class="btn-group float-right">
