--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -3,7 +3,7 @@
         <h1>Find your products</h1>
         <p class="lead">Come on to see the products</p>
         <div class="text-center">
-            <button (click)="registerToggle()" class="btn btn-primary btn-lg mr-2">Register</button>
+            <button (click)="registerToggle()" class="btn btn-primary btn-lg me-2">Register</button>
             <button class="btn btn-info btn-lg">Learn More</button>
 
         </div>
