--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -2,7 +2,7 @@
     <div class="container">
       <a class="navbar-brand" routerLink="/" routerLinkActive="active" >Gym App</a>
 
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav me-auto">
           <ng-container *ngIf="accountService.currentUser$ |async">
             <li class="nav-item">
               <a class="nav-link" routerLink="/members" routerLinkActive="active">Gym</a>
@@ -26,7 +26,7 @@
 
         <div class="dropdown" *ngIf="(accountService.currentUser$ |async) as user" dropdown>
           <img src="{{user.photoUrl || './assets/user.png'}}" alt="{{user.username}}">
-          <a  class="dropdown-toggle text-light ml-2" dropdownToggle>Welcome {{user.username | titlecase}}</a>
+          <a  class="dropdown-toggle text-light ms-2 text-decoration-none" dropdownToggle>Welcome {{user.username | titlecase}}</a>
           <div class="dropdown-menu mt-3 " *dropdownMenu>
             <a routerLink="/member/edit" class="dropdown-item">EditProfile</a>
             <div class="dropdown-divider"></div>
@@ -35,19 +35,19 @@
           </div>
         </div>
 
-        <form *ngIf="(accountService.currentUser$ |async) === null" #loginForm="ngForm" class="d-flex"(ngSubmit)="login()" autocomplete="off">
+        <form *ngIf="(accountService.currentUser$ |async) === null" #loginForm="ngForm" class="d-flex mt-2 mt-md-0"(ngSubmit)="login()" autocomplete="off">
           <input
           name="username"
           [(ngModel)]="model.username"
-           class="form-control me-2" 
+           class="form-control me-sm-2" 
            type="text" placeholder="Username">
           <input 
           name="password"
           [(ngModel)]="model.password"
-          class="form-control me-2" 
+          class="form-control mr-sm-2" 
           type="password" placeholder="Password">
 
-          <button class="btn btn-success" type="submit">Login</button>
+          <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
         </form>
 
     </div>
