--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -3,68 +3,56 @@
 </div>
 
 <div class="container mt-3">
-    <form #form="ngForm" class="form-app"  (ngSubmit)="loadMembers()" autocomplete="off">
-        <div class="testing">
-            <div >
-                <label >Age from:</label>
-                <input type="number" class="form-control ml-1" style="width: 70px;" name="minAge" 
+    <form #form="ngForm" class="d-flex mb-3" (ngSubmit)="loadMembers()" autocomplete="off">
+        <div class="d-flex mx-2">
+            <label class="col-form-label me-2">Age from:</label>
+            <input type="number" class="form-control ml-1" style="width: 70px;" name="minAge"
                 [(ngModel)]="userParams.minAge">
-            </div>
-            <div >
-                <label >Age to:</label>
-                <input type="number" class="form-control ml-1" style="width: 70px;" name="maxAge" 
-                [(ngModel)]="userParams.maxAge">
-            </div>
-            <div >
-                    <label >Show: </label>
-                    <select name="gender" style="width: 130px;" [(ngModel)]="userParams.gender" class="form-control ml-1">
-                        <option *ngFor="let gender of genderList" [value]="gender.value">
-                            {{gender.display}}
-                        </option>
-                    </select>
-            </div>
-            <button class="btn btn-primary ml-1" type="submit">Apply filters</button>
-            <button (click)="resetFilters()" class="btn btn-info ml-1" type="submit">Reset filters</button>
         </div>
-        
+
+        <div class="d-flex px-2">
+            <label class="col-form-label me-2">Age to:</label>
+            <input type="number" class="form-control ml-1" style="width: 70px;" name="maxAge"
+                [(ngModel)]="userParams.maxAge">
+        </div>
+        <div class="d-flex px-2">
+            <label class="col-form-label me-2">Show: </label>
+            <select name="gender" style="width: 130px;" [(ngModel)]="userParams.gender" class="form-control ml-1">
+                <option *ngFor="let gender of genderList" [value]="gender.value">
+                    {{gender.display}}
+                </option>
+            </select>
+        </div>
+        <button class="btn btn-primary ms-1" type="submit">Apply filters</button>
+        <button (click)="resetFilters()" class="btn btn-info ms-1" type="submit">Reset filters</button>
+
+
 
         <div class="col">
-            <div class="btn-group float-right">
-                <button type="button"
-                 class="btn btn-primary"
-                  name="orderBy" 
-                  (click)="loadMembers()" btnRadio="lastActive"
-                  [(ngModel)]="userParams.orderBy"  >
+            <div class="btn-group float-end">
+                <button type="button" class="btn btn-primary" name="orderBy" (click)="loadMembers()"
+                    btnRadio="lastActive" [(ngModel)]="userParams.orderBy">
                     Last Active
                 </button>
-    
-                <button type="button"
-                 class="btn btn-primary"
-                 name="orderBy" 
-                 (click)="loadMembers()" btnRadio="created" 
-                 [(ngModel)]="userParams.orderBy"  >
-                   Newest Members
-               </button>
+
+                <button type="button" class="btn btn-primary" name="orderBy" (click)="loadMembers()" btnRadio="created"
+                    [(ngModel)]="userParams.orderBy">
+                    Newest Members
+                </button>
             </div>
         </div>
-        
+
     </form>
 </div>
 <div class="row">
-    <div *ngFor="let member of members" class="col-2" >
+    <div *ngFor="let member of members" class="col-2">
         <app-member-card [member]="member"></app-member-card>
     </div>
 </div>
 
 <div class="d-flex justify-content-center" *ngIf="pagination">
-    <pagination [boundaryLinks]="true" 
-            [totalItems]="pagination.totalItems"
-            [itemsPerPage]="pagination.itemsPerPage"
-            [(ngModel)]="pagination.currentPage"
-            (pageChanged)="pageChanged($event)"
-            previousText="&lsaquo;"
-            nextText="&rsaquo;" 
-            firstText="&laquo;" 
-            lastText="&raquo;">
+    <pagination [boundaryLinks]="true" [totalItems]="pagination.totalItems" [itemsPerPage]="pagination.itemsPerPage"
+        [(ngModel)]="pagination.currentPage" (pageChanged)="pageChanged($event)" [maxSize]="10" previousText="&lsaquo;"
+        nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
     </pagination>
 </div>
