--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -2,13 +2,13 @@
     <h2 class="text-center text-primary">Sign Up</h2>
     <hr>
 
-    <div class="form-group mb-2">
-        <label  class="control-label" style="margin-right: 10px;">I am a: </label>
-        <label  class="radion-inline">
-            <input type="radio" value="male" formControlName="gender">Male
+    <div class="mb-3">
+        <label  style="margin-right: 10px;">I am a: </label>
+        <label  class="form-check-label">
+            <input class="form-check-input" type="radio" value="male" formControlName="gender">Male
         </label>
-        <label  class="radion-inline">
-            <input type="radio" value="female" formControlName="gender" class="ml-3">Female
+        <label  class="form-check-label">
+            <input type="radio" value="female" formControlName="gender" class="form-check-input ms-3">Female
         </label>
     </div>
     <app-text-input [formControl]="registerForm.controls['username']" [label]="'Username'">
